--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viaggio a Londra</title>
 </head>
+
 <body>
 
     <!-- start header - title + 3 parts photo-->
     <header>
-        
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="img/pexels-0.jpg" alt="ferris wheel london">
+        <img src="img/pexels-1.jpg" alt="bridge london">
+        <img src="img/pexels-2.jpg" alt="big ben london">
+        <hr>
     </header>
     <!-- end header -->
 
