--- a/index.html
+++ b/index.html
@@ -24,7 +24,44 @@
 
         <!-- start section - le mie spese -->
         <section>
-
+            <h3>Le mie spese</h3>
+            <table>
+                <!-- Intestazione tabella -->
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <!-- corpo tabella -->
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                </tbody>
+                <!-- footer tabella -->
+                <tfoot>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360€</td>
+                    </tr>
+                </tfoot>
+            </table>
+            <hr>
         </section>
         <!-- end section - le mie spese -->
 
