--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- start section - le mie spese -->
         <section>
-            <h3>Le mie spese</h3>
+            <h2>Le mie spese</h2>
             <table>
                 <!-- Intestazione tabella -->
                 <thead>
@@ -80,7 +80,18 @@
         
         <!-- start section - info utili -->
         <section>
+            <h3>Info utili:</h3>
+            <ol>
+                <li>
+                    Numeri utili di emergenza
+                    <ul>
+                        <li><strong>999</strong> - Emergenza</li>
+                        <li><strong>101</strong> - Numero polizia</li>
+                        <li><strong>111</strong> - Numero assistenza medica</li>
 
+                    </ul>
+                </li>
+            </ol>
         </section>
         <!-- end section - info utili -->
 
