--- a/index.html
+++ b/index.html
@@ -88,9 +88,17 @@
                         <li><strong>999</strong> - Emergenza</li>
                         <li><strong>101</strong> - Numero polizia</li>
                         <li><strong>111</strong> - Numero assistenza medica</li>
-
                     </ul>
                 </li>
+
+                <li>
+                    Hotel
+                    <ul>
+                        <li><strong>Nome hotel:</strong> Buckingham Palace</li>
+                        <li><strong>Indirizzo hotel:</strong> Westminster, London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                </li>
+
             </ol>
         </section>
         <!-- end section - info utili -->
