--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <!-- start header - title + 3 parts photo-->
     <header>
         <h1>Il mio Viaggio a Londra</h1>
-        <img src="img/pexels-0.jpg" alt="ferris wheel london">
-        <img src="img/pexels-1.jpg" alt="bridge london">
-        <img src="img/pexels-2.jpg" alt="big ben london">
+        <div>
+            <img src="img/pexels-0.jpg" alt="ferris wheel london">
+            <img src="img/pexels-1.jpg" alt="bridge london">
+            <img src="img/pexels-2.jpg" alt="big ben london">
+        </div>
         <hr>
     </header>
     <!-- end header -->
